--- a/src/l.gutorova/homework_8/Homework_8.html
+++ b/src/l.gutorova/homework_8/Homework_8.html
@@ -71,6 +71,7 @@
     <div class="common-4">
         <div class="conteiner-6">
             <div class="conteiner-10">
+                <a id="bottom"></a>
                 <div class="text-1">Скачайте<br>приложение</div>
                 <div class="text-2">Введите номер, и мы пришлём вам смс 
                     <br>со ссылкой на приложение.
@@ -122,13 +123,17 @@
             </div>
         </div>
         
-        <div class="common-5_bottom"></div>
+        <div class="common-5_bottom">
+            <div class="conteiner-14">
+                <div class="conteiner-14-text"><a target="_blank" href="https://yandex.com/legal/yandexgo_termsofuse/#index__belarus_ru">Пользовательское соглашение</a></div>
+                <div class="conteiner-14-text"><a target="_blank" href="https://yandex.com/legal/yandexgo_mobile_agreement/#index__belarus_ru">Лицензионное соглашение</a></div>
+                <div class="conteiner-14-text"><a target="_blank" href="https://yandex.ru/legal/confidential/?lang=ru">Политика конфиденциальности</a></div>
+            </div>
+            <div  class="conteiner-15">Яндекс Go — электронно-информационный сервис. Услуги по перевозке и иные услуги оказываются партнёрами сервиса самостоятельно.</div>
+            <div class="conteiner-16">&#169;2011−2021 Yandex.Taxi LLC</div>
+
+        </div>
 
     </div>
-
-
-
-
-    <a id="bottom"></a>
 </body>
 </html>
