--- a/src/l.gutorova/homework_8/Homework_8.html
+++ b/src/l.gutorova/homework_8/Homework_8.html
@@ -19,10 +19,14 @@
         </div>
 
         <div class="conteiner-2">
-            <div class="text-1">Ехать,<br>отправлять,<br>встречат</div>
-            <div class="text-2  text-animation">Заказывайте машину, чтобы отправиться в путь,
+            <div class="text-1  ">Ехать, отправлять, встречать</div>
+            <div class="text-2  text-animation  dop-1 ">Заказывайте машину, чтобы отправиться в путь,
                 <br>или доставку, чтобы отправить в путь небольшой
                 <br>груз</div>
+                <div class="text-2  text-animation  dop-2">Заказывайте машину, чтобы 
+                    <br>отправиться в путь, или
+                    <br> доставку, чтобы отправить в
+                    <br> путь небольшой груз</div>
                 <div class="link_3">
                     <a  href="#bottom">Скачать приложение</a>
                 </div>
@@ -36,13 +40,19 @@
                     <a href="#bottom">поездки</a>
                 </div>
                 <div class="text-1">Быстрый заказ<br>машины</div>
-                <div class="text-2  text-2-media">Вы указываете, куда ехать, и сразу видите цену 
+                <div class="text-2  text-2-media  dop-1">Вы указываете, куда ехать, и сразу видите цену 
                     <br>поездки и предполагаемое время в пути. Оплатить 
                     <br>можно картой или наличными водителю.
                 </div>
+                <div class="text-2  text-2-media  dop-2">Вы указываете, куда ехать,
+                    <br> и сразу видите цену поездки
+                    <br>и предполагаемое время в пути.
+                    <br> Оплатить можно картой или
+                    <br> наличными водителю.
+                </div>
                 <div class="animation  animation-media ">
                     <a class="link_5" href="#bottom">Заказать машину в Яндекс Go</a>
-                    <div class="arrow">&#8594;</div>
+                    <div class="arrow  media-dop">&#8594;</div>
                 </div>
             </div>
         </div>
