--- a/src/l.gutorova/homework_8/Homework_8.html
+++ b/src/l.gutorova/homework_8/Homework_8.html
@@ -67,12 +67,16 @@
                     <a href="#bottom">доставка</a>
                 </div>
                 <div class="text-1  text-1-media">Перевозка ваших<br>вещей</div>
-                <div class="text-2  text-2-media-2">Водитель передаст документы, доставит
+                <div class="text-2  text-2-media-2  dop-1">Водитель передаст документы, доставит
                     <br>цветы или довезёт небольшой груз
+                </div>
+                <div class="text-2  text-2-media-2  dop-2">Водитель передаст документы,
+                    <br> доставит цветы или довезёт
+                    <br> небольшой груз
                 </div>
                 <div class="animation  animation-media-2">
                     <a class="link_5" href="#bottom">Заказать доставку через Яндекс Go</a>
-                    <div class="arrow">&#8594;</div>
+                    <div class="arrow  media-dop-2">&#8594;</div>
                 </div>
              </div>
         </div>
@@ -83,7 +87,11 @@
             <div class="conteiner-10">
                 <a id="bottom"></a>
                 <div class="text-1">Скачайте<br>приложение</div>
-                <div class="text-2">Введите номер, и мы пришлём вам смс 
+                <div class="text-2  dop-1">Введите номер, и мы пришлём вам смс 
+                    <br>со ссылкой на приложение.
+                </div>
+                <div class="text-2  dop-2">Введите номер,
+                    <br> и мы пришлём вам смс 
                     <br>со ссылкой на приложение.
                 </div>
                 <div class="animation  animation-border">
@@ -102,7 +110,7 @@
     <div class="common-5">
         <div class="common-5_top">
             <div class="top-text">Беларусь (Русский)</div>
-            <div class="top-icon">
+            <div class="top-icon  dop-1">
                 <div class="icon"><a target="_blank" href="https://vk.com/belarus.yandexgo"><img src="./picture/vk.svg" ></a></div>
                 <div class="icon"><a target="_blank" href="https://www.facebook.com/belarus.yandex.go/"><img src="./picture/fb.svg"></a></div>
                 <div class="icon"><a target="_blank" href="https://www.instagram.com/yandex.go.belarus/"><img src="./picture/inst.svg"></a></div>
@@ -129,6 +137,11 @@
                 <div  class="middle-number-phone">
                     <input type="tel"  placeholder="+375 ХХ ХХХ-ХХ-ХХ">
                     <div><span class="material-icons">chevron_right</span></div>
+                </div>
+                <div class="top-icon  dop-2">
+                    <div class="icon"><a target="_blank" href="https://vk.com/belarus.yandexgo"><img src="./picture/vk.svg" ></a></div>
+                    <div class="icon"><a target="_blank" href="https://www.facebook.com/belarus.yandex.go/"><img src="./picture/fb.svg"></a></div>
+                    <div class="icon"><a target="_blank" href="https://www.instagram.com/yandex.go.belarus/"><img src="./picture/inst.svg"></a></div>
                 </div>
             </div>
         </div>
