--- a/src/l.gutorova/homework_8/Homework_88.html
+++ b/src/l.gutorova/homework_8/Homework_88.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="animation  animation-border">
                     <label class="phone">
-                        <input type="tel" placeholder="+375 ХХ ХХХ-ХХ-ХХ">
+                        <input type="tel" name="new1" placeholder="+375 ХХ ХХХ-ХХ-ХХ">
                     </label>
                     <div><span class="material-icons">chevron_right</span></div>
                 </div>
@@ -109,7 +109,8 @@
     </div>
     <div class="common-5">
         <div class="common-5_top">
-            <div class="top-text">Беларусь (Русский)</div>
+            <div class="top-text"><span class="material-icons">public</span>
+                Беларусь (Русский)</div>
             <div class="top-icon  dop-1">
                 <div class="icon"><a target="_blank" href="https://vk.com/belarus.yandexgo"><img src="./picture/vk.svg" ></a></div>
                 <div class="icon"><a target="_blank" href="https://www.facebook.com/belarus.yandex.go/"><img src="./picture/fb.svg"></a></div>
@@ -117,7 +118,7 @@
             </div>
         </div>
         <div class="common-5_middle">
-            <div class="middle-trips">
+            <div class="middle-trips  dop-1 ">
                 <div class="middle-trips-text">Поездки</div>
                 <div class="variants">
                     <a target="_blank" href="https://taxi.yandex.by/" >Заказать машину</a><br>
@@ -126,13 +127,33 @@
                     <a target="_blank" href="https://taxi.yandex.by/support/">Служба поддержки</a>
                 </div>
             </div>
-            <div class="middle-food">
+            <div class="dop-2  replace">
+            <label>
+                <select name="new2">
+                   <option>Поездки</option>
+                   <option>Заказать машину</option>
+                   <option>Доставка</option>
+                   <option>Новости сервиса</option>
+                   <option>Служба поддержки</option>
+                
+                </select>
+            </label>
+            </div>
+            <div class="middle-food  dop-1 ">
                 <div class="middle-trips-text">Еда</div>
                 <div class="variants">
-                    <a target="_blank" href="https://eda.yandex.by/?from=gofooter">Яндекс Еда</a>
+                    <a target="_blank" href="https://eda.yandex.by/?from=gofooter">Яндекс. Еда</a>
                 </div>
             </div>
-            <div class="middle-number">
+            <div class="dop-2  replace">
+                <label>
+                    <select name="new3">
+                        <option>Еда</option>
+                       <option>Яндекс. Еда</option>
+                    </select>
+                </label>
+                </div>
+            <div class="middle-number  dop-1">
                 <div class="middle-number-text">Введите номер, и мы пришлем вам смс со ссылкой<br> на приложение.</div>
                 <div  class="middle-number-phone">
                     <input type="tel"  placeholder="+375 ХХ ХХХ-ХХ-ХХ">
@@ -143,6 +164,14 @@
                     <div class="icon"><a target="_blank" href="https://www.facebook.com/belarus.yandex.go/"><img src="./picture/fb.svg"></a></div>
                     <div class="icon"><a target="_blank" href="https://www.instagram.com/yandex.go.belarus/"><img src="./picture/inst.svg"></a></div>
                 </div>
+            </div>
+            <div class="middle-number   dop-2">
+                <div class="middle-number-text  replace-2">Введите номер, и мы пришлем вам смс<br> со ссылкой на приложение.</div>
+                <div  class="middle-number-phone  replace-3">
+                    <input type="tel"  placeholder="+375 ХХ ХХХ-ХХ-ХХ">
+                    <div><span class="material-icons">chevron_right</span></div>
+                </div>
+
             </div>
         </div>
         
