--- a/src/l.gutorova/homework_8/Homework_8.html
+++ b/src/l.gutorova/homework_8/Homework_8.html
@@ -174,6 +174,12 @@
 
             </div>
         </div>
+
+        <div class="top-icon  dop-3">
+            <div class="icon"><a target="_blank" href="https://vk.com/belarus.yandexgo"><img src="./picture/vk.svg" ></a></div>
+            <div class="icon"><a target="_blank" href="https://www.facebook.com/belarus.yandex.go/"><img src="./picture/fb.svg"></a></div>
+            <div class="icon"><a target="_blank" href="https://www.instagram.com/yandex.go.belarus/"><img src="./picture/inst.svg"></a></div>
+        </div>
         
         <div class="common-5_bottom">
             <div class="conteiner-14">
