--- a/src/l.gutorova/homework_9/Task_3/Task_3.html
+++ b/src/l.gutorova/homework_9/Task_3/Task_3.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework_9</title>
-    <link rel="stylesheet" type="text/css" href="Task_2.css">
-</head>
+    <link rel="stylesheet" type="text/css" href="Task_3.css">
 </head>
 <body>
-    <div class="conteiner"></div>
-    
+    <div class="conteiner-1"></div>
+    <div class="conteiner-2"></div>
 </body>
 </html>
