--- a/src/l.gutorova/homework_9/Task_4/Task_4.html
+++ b/src/l.gutorova/homework_9/Task_4/Task_4.html
@@ -11,12 +11,12 @@
     <div class="common">
         <div class="text">Hi!</div>
 
-        <div class="conteiner-1">
+        <div class="conteiner">
            <div class="cub  red"></div>
            <div class="cub  blue"></div>
         </div>
 
-        <div class="conteiner-2">
+        <div class="conteiner">
             <div class="cub  yellow"></div>
             <div class="cub  green"></div>
         </div>
