--- a/src/d.astreyko/lesson_19/table.html
+++ b/src/d.astreyko/lesson_19/table.html
@@ -45,12 +45,26 @@
 
 <script>
 
-   const rows = document.getElementsByTagName('tr');
-   for(let index = 0; index< rows.length; index++) {
-       const row = rows[index];
-       const td = row.children[index]
-       td.style.background = 'red';
-   }
+    <script>
+        function createTriangle(a,b,c){
+        if(c < a + b && c>0 && a>0 && b>0){
+        return true;
+
+    }else if(b < a + c && c>0 && a>0 && b>0){
+        return true;
+
+    }else if(a < b + c && c>0 && a>0 && b>0){
+        return true;
+
+    }else{
+        return false;
+    }
+    }
+        console.log(createTriangle(3,4,5));
+        console.log(createTriangle(3,4,7));
+        console.log(createTriangle(5,1,1));
+        console.log(createTriangle(5,0,1));
+
 </script>
 </body>
 </html>
